--- a/assets/scss/index.scss
+++ b/assets/scss/index.scss
@@ -1,3 +1,5 @@
 @import "common";
 @import "components/_menu";
 @import "components/_banner";
+@import "components/_partners";
+@import "components/_app";
