--- a/assets/scss/index.scss
+++ b/assets/scss/index.scss
@@ -3,3 +3,6 @@
 @import "components/_banner";
 @import "components/_partners";
 @import "components/_app";
+@import "components/_about";
+@import "components/_analytics";
+@import "components/_footer";
