--- a/assets/scss/index.scss
+++ b/assets/scss/index.scss
@@ -5,4 +5,7 @@
 @import "components/_app";
 @import "components/_about";
 @import "components/_analytics";
+@import "components/_blog";
+@import "components/_customers";
+@import "components/_faq";
 @import "components/_footer";
