--- a/assets/scss/components/_customers/_customers.scss
+++ b/assets/scss/components/_customers/_customers.scss
@@ -89,7 +89,7 @@
       transform: scale(1.2);
     }
   }
-  p{
+  &__card-text{
     font-family: 'Roboto', sans-serif;
     font-size: 14px;
     font-weight: 400;
