--- a/assets/scss/index.scss
+++ b/assets/scss/index.scss
@@ -8,4 +8,6 @@
 @import "components/_blog";
 @import "components/_customers";
 @import "components/_faq";
+@import "components/_plan";
+@import "components/_singUp";
 @import "components/_footer";
