--- a/assets/scss/common/common.scss
+++ b/assets/scss/common/common.scss
@@ -1,30 +1,5 @@
-@media (max-width: 1440px) {
+@media (min-width: 1140px) {
   .container{
     max-width: 1206px;
-  }
-}
-@media (max-width: 1206px) {
-  .container{
-    max-width: 992px;
-  }
-}
-@media (max-width: 992px) {
-  .container{
-    max-width: 767px;
-  }
-}
-@media (max-width: 767px) {
-  .container{
-    max-width: 576px;
-  }
-}
-@media (max-width: 576px) {
-  .container{
-    max-width: 320px;
-  }
-}
-@media (max-width: 320px) {
-  .container{
-    max-width: 100%;
   }
 }
