--- a/assets/scss/components/_about/_about.scss
+++ b/assets/scss/components/_about/_about.scss
@@ -97,15 +97,16 @@
     padding-left: 0;
   }
   &__item{
-    padding: 0 35px;
+    width: calc(100% / 4);
+    padding: 0 60px;
     display: flex;
     flex-direction: column;
     align-items: center;
     &:not(:last-child):after{
       content: url("../img/Line2.1.svg");
       position: absolute;
-      top: 33%;
-      padding-left: 16%;
+      top: 50%;
+      padding-left: 25%;
     }
   }
   .clouds{
