--- a/assets/scss/components/_analytics/_analytics.scss
+++ b/assets/scss/components/_analytics/_analytics.scss
@@ -22,6 +22,7 @@
   &__users{
     padding: 66px 0 66px 50px;
     position: relative;
+    height: 100%;
     background: linear-gradient(101.48deg, #E9EFFF 41.56%, #E0E9FF 81.53%);
     &:after{
       position: absolute;
@@ -51,6 +52,9 @@
   .productivity-text{
     color: #ffffff;
     text-align: right;
+  }
+  .row>*{
+    padding: 0;
   }
   &__text{
     font-family: 'Quicksand', sans-serif;
