--- a/assets/scss/components/_customers/_customers-media.scss
+++ b/assets/scss/components/_customers/_customers-media.scss
@@ -21,6 +21,19 @@
       height: 155px;
       margin: 0 auto;
     }
+    &__img{
+      bottom: -5rem;
+    }
+  }
+}
+@media (max-width: 767px) {
+  .customers{
+    &__card-text{
+      max-width: 100%;
+    }
+    &__card{
+      height: 180px;
+    }
   }
 }
 @media (max-width: 576px) {
@@ -43,7 +56,6 @@
     }
     &__card{
       width: 100%;
-      height: 205px;
     }
     &__text{
       max-width: 100%;
