--- a/assets/scss/components/_footer/_footer-media.scss
+++ b/assets/scss/components/_footer/_footer-media.scss
@@ -1,7 +1,5 @@
 @media (max-width: 992px) {
   .footer{
-    .container{
-    }
     &__info{
       padding-left: 60px;
     }
@@ -10,24 +8,19 @@
 @media (max-width: 767px) {
   .footer{
     padding: 45px 0;
-    .container{
-      .row{
-        width: 50% !important;
-      }
-    }
     &__info{
       padding-top: 0;
+    }
+    &__text{
+      width: 80%;
+      display: flex;
+      align-items: center;
     }
   }
 }
 @media (max-width: 576px) {
   .footer{
     padding: 30px 0;
-    .container{
-      .row{
-        width: 80% !important;
-      }
-    }
     &__info{
       padding: 0;
     }
