--- a/assets/scss/components/_footer/_footer.scss
+++ b/assets/scss/components/_footer/_footer.scss
@@ -1,7 +1,7 @@
 .footer{
   padding: 90px 0;
-  .container{
-    flex-wrap: wrap;
+  &__text{
+    width: 100%;
   }
   &__info{
     font-family: 'Quicksand', sans-serif;
