--- a/scss/components/_plan/_plan.scss
+++ b/scss/components/_plan/_plan.scss
@@ -2,7 +2,7 @@
   background: linear-gradient(229.32deg, #6888FF 12.77%, #5E80FF 73.11%);
   &__clouds{
     padding: 91px 0;
-    background-image: url("../img/clouds_plan.svg");
+    background-image: url("../assets/img/clouds_plan.svg");
     background-size: cover;
   }
   &__description{
