--- a/scss/components/_blog/_blog.scss
+++ b/scss/components/_blog/_blog.scss
@@ -18,10 +18,10 @@
     right: -5%;
   }
   .carousel-control-prev-icon {
-    background-image: url("../img/arrow.svg");
+    background-image: url("../assets/img/arrow.svg");
   }
   .carousel-control-next-icon {
-    background-image: url("../img/arrow.svg");
+    background-image: url("../assets/img/arrow.svg");
     transform: rotate(180deg);
   }
   .carousel-indicators button {
