--- a/scss/components/_faq/_faq.scss
+++ b/scss/components/_faq/_faq.scss
@@ -60,7 +60,7 @@
       height: 11px;
       margin: 0 25px;
       content: "";
-      background-image: url("../img/arrow_acc.svg");
+      background-image: url("../assets/img/arrow_acc.svg");
       background-repeat: no-repeat;
       background-size: var(--bs-accordion-btn-icon-width);
       transition: var(--bs-accordion-btn-icon-transition);
@@ -70,7 +70,7 @@
     }
   }
   .accordion-button:not(.collapsed)::before{
-    background-image: url("../img/arrow_acc-active.svg");
+    background-image: url("../assets/img/arrow_acc-active.svg");
   }
   .accordion-button:not(.collapsed){
     color: #495274;
